// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSScopedNotification Dark 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_dark"
      role="status"
    >
      <div
        className="slds-media__figure"
      >
        <span>
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#info"
            />
          </svg>
          
        </span>
      </div>
      <div
        className="slds-media__body"
      >
        <p>
          It looks as if duplicates exist for this lead.
           
          <a
            href="javascript:void(0);"
          >
            View Duplicates.
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSScopedNotification Light 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": "rgb(244, 246, 249)",
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light"
      role="status"
    >
      <div
        className="slds-media__figure"
      >
        <span>
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#info"
            />
          </svg>
          
        </span>
      </div>
      <div
        className="slds-media__body"
      >
        <p>
          It looks as if duplicates exist for this lead.
           
          <a
            href="javascript:void(0);"
          >
            View Duplicates.
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
